[package]
name = "shooting-game"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = "0.24"
wasm-bindgen-futures = "0.4.5"
anyhow = "1.0.51"

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Window',
    'Document',
]

[lib]
crate-type = ["cdylib"]